<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2016 The Android Open Source Project
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
         http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">电企通相机</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="title_activity_set_up">SetUpActivity</string>
    <string name="project_name">项目名称</string>
    <string name="title">电企通相机</string>
    <string name="str_main_titile">施工记录</string>
    <string name="jtv_project_name">项目名称：</string>
    <string name="jtv_place">施工单位：</string>
    <string name="jtv_weather">天气状况：</string>
    <string name="jtv_logitude">经度：</string>
    <string name="jtv_latitude">纬度：</string>
    <string name="jtv_time">当前日期：</string>
    <string name="jtv_address">位置信息：</string>
    <string name="jtv_altitude">海拔：103.53米</string>
    <string name="fun_setting">功能设置</string>
    <string name="jtv_abtain">取证单位：</string>
    <string name="str_content">作业内容：</string>
    <string name="jtv_logitude_latitude">经纬度数：</string>

</resources>
